services/companies-sync/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-companies
spec:
  selector:
    app: postgres-companies
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
