services/companies-sync/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: companies-api
spec:
  selector:
    app: companies-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
